# chesster

./: .gitignore  Dockerfile.base  Makefile  README.md  docker-compose.yml  pyproject.toml
chesster/: agent.py  analysis_agent.py  app.py  chain.py  game_agent.py  langserver.py  play_stockfish.py  tools.py  utils.py
chesster/app/: Dockerfile.app  app.py  board_manager.py  html.py
chesster/app/static/css/: style.css
chesster/app/static/js/: script.js
chesster/app/templates/: index.html
chesster/langserve/: Dockerfile  Dockerfile.langserve  agent.py  langserver.py  pyproject.toml  tools.py
chesster/langserve/app/: agent.py  langserver.py
stockfish/: README.md  download.sh
tests/unit_tests/: test_agent.py  test_app.py  test_play_stockfish.py  test_utils.py
